# synpivimage

./: .coverage  .gitignore  .pylint  README.md  build.bat  codemeta.json  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/: README.md  api.rst  conf.py  index.rst
docs/getting_started/: Camera.ipynb  DoubleImage.ipynb  IO.ipynb  Laser.ipynb  Noise.ipynb  OutOfPlane.ipynb  SingleImage.ipynb  cam.json  index.rst  laser.json
examples/: Basics.ipynb  IO.ipynb  Noise.ipynb  Velocity_Based_Double_Image.ipynb  cleanup.ipynb  generate_datasets.ipynb  generate_particles_at_defined_locations.ipynb  laser_profile.ipynb  my_cam.json  mypositions.txt  out_of_plane.ipynb  take_a_single_image.ipynb  take_double_image.ipynb
synpivimage/: __init__.py  _version.py  camera.py  codemeta.py  component.py  config.py  conventions.py  core.py  io.py  laser.py  layout.py  log.py  mongodb.py  noise.py  particles.py  plotting.py  random.py  standard_name_translation.yaml  synpivimage-to-particle_image_velocimetry-v1.yml  synpivimage-to-synpiv-v1.yml  synpivimage.layout  utils.py  validation.py  velocityfield.py
synpivimage/gui/: build.bat  core.py
synpivimage/gui/lib/: corr.py  plotting.py
synpivimage/gui/src/: main.py  main.ui
synpivimage/tests/: test_core.py
tests/: test_component.py  test_core.py  test_io.py  test_readme_code.py  test_version.py
