[metadata]
name = synpivimage
version = 0.1.11
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = Tool to build synthetic Particle Image Velocimetry (PIV) images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MatthiasProbst/synpivimage
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    numpy
    pandas
    pathlib
    h5py
    xarray
    tifffile
    pyyaml
    tqdm
    matplotlib
    python-dotenv

[options.extras_require]
test =
    pytest
    pytest-cov
    pylint
convention =
    h5RDMtoolbox @ git+https://github.com/matthiasprobst/h5RDMtoolbox@dev
complete =
    %(test)s
    %(convention)s

[tool:pytest]
python_files = test_*.py
testpaths = synpivimage/tests
