[metadata]
name = synpivimage
version = 1.0.0
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = Tool to build synthetic Particle Image Velocimetry (PIV) images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MatthiasProbst/synpivimage
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    numpy
    pandas
    pathlib
    pyyaml
    tqdm
    matplotlib
    python-dotenv
    opencv-python
    scipy
    pivimage
    pydantic
    ontolutils @ git+https://github.com/matthiasprobst/ontology-utils
    pivmetalib @ git+https://github.com/matthiasprobst/pivmetalib

[options.extras_require]
test =
    pytest
    pytest-cov
    pylint
gui =
    PyQt5
complete =
    %(test)s


[tool:pytest]
python_files = test_*.py

[coverage:run]
source = synpivimage/*
relative_files = false
omit = */gui/*

